# gjq-runtime-mcp-server

./: .env.example  .gitignore  README.md  README_en.md  pyproject.toml
docs/: Changelog v0.1.0.md  SDK_PUBLIC_API_PROPOSAL.md
skills/gjq-quantum-runtime/: SKILL.md
src/gjq_runtime_mcp_server/: __init__.py  __main__.py  circuits.py  runtime.py  server.py
tests/: test_server.py
